Fix tests and fix warnings on JDK12